--- a/soap_and_shampoo_products.html
+++ b/soap_and_shampoo_products.html
@@ -3,15 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snack Products</title>
+    <title>Health Products</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="style.css">
 
     <style>
         /* Additional CSS for enhanced headings */
-        h1, h2 {
-            text-align: center;
-            font-family: Arial, sans-serif; /* Use any preferred font family */
+        .section-heading {
+            text-align: center; 
+            font-size: 24px;
+            color: #333;
+            margin-bottom: 20px;
+            text-transform: uppercase;
+            letter-spacing: 2px;
         }
     </style>
 </head>
@@ -36,18 +40,36 @@
         </div>
     </nav>
     <div class="container">
-        <h1>Snack Products</h1>
+        <h1>Health Products</h1>
 
-        <!-- Container for products with wafer_brand="balaji" -->
-        <div id="balajiProductsContainer">
-            <h2>Balaji</h2>
-            <div id="balajiProducts" style="display: flex; flex-wrap: wrap;">
-                <!-- Product cards with wafer_brand="balaji" will be dynamically added here -->
+        <div id="soapProductsContainer">
+            <h2 class="section-heading">Soap Bars</h2>
+            <div id="soapProducts" style="display: flex; flex-wrap: wrap;">
+                <!-- Soap bar product cards will be dynamically added here -->
             </div>
         </div>
 
-        <!-- Container for other snack products -->
-        
+        <div id="shampooProductsContainer">
+            <h2 class="section-heading">Shampoo Sachets</h2>
+            <div id="shampooProducts" style="display: flex; flex-wrap: wrap;">
+                <!-- Shampoo sachet product cards will be dynamically added here -->
+            </div>
+        </div>
+
+        <div id="clothSoapProductsContainer">
+            <h2 class="section-heading">Cloth Washing Soap Bars</h2>
+            <div id="clothSoapProducts" style="display: flex; flex-wrap: wrap;">
+                <!-- Cloth washing soap bar product cards will be dynamically added here -->
+            </div>
+        </div>
+
+        <div id="utensilSoapProductsContainer">
+            <h2 class="section-heading">Utensil Soap Bars</h2>
+            <div id="utensilSoapProducts" style="display: flex; flex-wrap: wrap;">
+                <!-- Utensil soap bar product cards will be dynamically added here -->
+            </div>
+        </div>
+
     </div>
 
     <a href="cart.html" class="cart-button"><i class="fas fa-shopping-cart"></i></a> <!-- Link to cart.html with cart icon -->
@@ -61,33 +83,46 @@
             });
         });
 
-        function fetchSnackProducts() {
-            fetch('product.html') // Change the file name to your actual file containing snack products
+        function fetchHealthProducts() {
+            fetch('product.html') // Change the file name to your actual file containing health products
                 .then(response => response.text())
                 .then(data => {
                     const parser = new DOMParser();
                     const doc = parser.parseFromString(data, 'text/html');
-                    const snackProducts = Array.from(doc.getElementsByClassName('product'));
-                    const balajiProducts = [];
-                    const otherSnackProducts = [];
+                    const products = Array.from(doc.getElementsByClassName('product'));
+                    
+                    // Containers for different types of health products
+                    const soapProductsContainer = document.getElementById('soapProducts');
+                    const shampooProductsContainer = document.getElementById('shampooProducts');
+                    const clothSoapProductsContainer = document.getElementById('clothSoapProducts');
+                    const utensilSoapProductsContainer = document.getElementById('utensilSoapProducts');
 
-                    snackProducts.forEach(product => {
-                        const waferBrand = product.getAttribute('wafer_brand');
-                        if (waferBrand === 'balaji') {
-                            balajiProducts.push(product.outerHTML);
-                        } else {
-                            otherSnackProducts.push(product.outerHTML);
+                    // Filter products based on their types and append them to respective containers
+                    products.forEach(product => {
+                        const type = product.getAttribute('type');
+                        switch (type) {
+                            case 'soap_bar':
+                                soapProductsContainer.innerHTML += product.outerHTML;
+                                break;
+                            case 'shampoo_sachet':
+                                shampooProductsContainer.innerHTML += product.outerHTML;
+                                break;
+                            case 'cloth_soap_bar':
+                                clothSoapProductsContainer.innerHTML += product.outerHTML;
+                                break;
+                            case 'utensil_soap_bar':
+                                utensilSoapProductsContainer.innerHTML += product.outerHTML;
+                                break;
+                            default:
+                                break;
                         }
                     });
-
-                    document.getElementById('balajiProducts').innerHTML = balajiProducts.join('');
-                    document.getElementById('snackProducts').innerHTML = otherSnackProducts.join('');
                 })
-                .catch(error => console.error('Error fetching snack products:', error));
+                .catch(error => console.error('Error fetching health products:', error));
         }
 
-        // Call the function to fetch and display snack products when the page loads
-        window.onload = fetchSnackProducts;
+        // Call the function to fetch and display health products when the page loads
+        window.onload = fetchHealthProducts;
 
         function addToCart(name, price) {
             let cartItems = JSON.parse(localStorage.getItem('cart')) || [];
