--- a/product.html
+++ b/product.html
@@ -875,7 +875,7 @@
                 <button onclick="addToCart('Balaji - Mung Dal', 5.00)">Add to Cart</button>
             </div>
         </div>
-        <div class="product"  wafer_brand="balaji" snack_type="biscuit">
+        <div class="product"  wafer_brand="balaji">
             <img src="https://www.bigbasket.com/media/uploads/p/l/30010133_2-balaji-farali-chevdo-namkeen.jpg" alt="Product 2">
             <div class="product-details">
                 <div class="product-name">Balaji - Farali Chevdo</div>
