--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <meta charset="UTF-8">
     <link rel="icon" type="image/x-icon" href="/images/Logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +15,7 @@
         <div class="navbar-container">
             <div class="logo">
                 <a href="index.html">
-                  <span class="company-name">Easy Grocs</span>
+                  <b><span class="company-name">Easy Grocs</span></b>
                   <i class="fas fa-home"></i>
                 </a>
             </div>
@@ -142,37 +143,37 @@
 <div class="interactive-cards">
     <div class="card">
         <h2>Snacks</h2>
-        <p>EasyGroc</p>
+        <b><p>EasyGroc</p></b>
         <button onclick="redirectToPage('snacks.html')">View Details</button>
     </div>
     <div class="card">
         <h2>Dairy Products</h2>
-        <p>EasyGroc</p>
+        <b><p>EasyGroc</p></b>
         <button onclick="redirectToPage('dairy_products.html')">View Details</button>
     </div>
     <div class="card">
         <h2>Cold Drinks</h2>
-        <p>EasyGroc</p>
+       <b><p>EasyGroc</p></b>
         <button onclick="redirectToPage('cold_drinks_product.html')">View Details</button>
     </div>
     <div class="card">
         <h2>House Holds</h2>
-        <p>EasyGroc</p>
+       <b><p>EasyGroc</p></b>
         <button onclick="redirectToPage('House_Holds_Products.html')">View Details</button>
     </div>
     <div class="card">
         <h2>Soap & Shampoo</h2>
-        <p>EasyGroc</p>
+    <b> <p>EasyGroc</p></b>
         <button onclick="redirectToPage('soap_and_shampoo_products.html')">View Details</button>
     </div>
     <div class="card">
         <h2>Masala</h2>
-        <p>EasyGroc</p>
+      <b>  <p>EasyGroc</p></b>
         <button onclick="redirectToPage('masala_product.html')">View Details</button>
     </div>
     <div class="card">
         <h2>Electronics</h2>
-        <p>EasyGroc</p>
+    <b><p>EasyGroc</p></b>
         <button onclick="redirectToPage('electronics.html')">View Details</button>
     </div>
     
