--- a/masala_product.html
+++ b/masala_product.html
@@ -640,8 +640,8 @@
     <b><p>Shop By Price</p></b>
 
         <a href="masala_product.html">10rs Special</a>
-        <a href="dairy_products.html">15rs Special</a>
-        <a href="electronics.html">20rs Special</a>  
+        <a href="masala_products.html">15rs Special</a>
+        <a href="masala_products.html">20rs Special</a>  
         
     </div>
     
