--- a/checkout.html
+++ b/checkout.html
@@ -69,8 +69,9 @@
   <!-- Order Number Section -->
   <h2>Order Number</h2>
   <input type="text" id="orderNumber" name="orderNumber" readonly>
-
+  <h3 style="color: red;">WARNING: Please click the checkout button only once</h3>
   <input type="submit" value="Place Order">
+  
 </form>
 
 <script>
