--- a/product.html
+++ b/product.html
@@ -1009,7 +1009,7 @@
         <div class="product" data-category="Electrical" elec_category="Mobile_Accessories">
             <img src="https://m.media-amazon.com/images/I/612rtX-CSVL._SX679_.jpg" alt="Product 2">
             <div class="product-details">
-                <div class="product-name">UltraPods - Greeen</div>
+                <div class="product-name">UltraPods - Green</div>
                 <div class="product-price">Rs.499</div>
                 <button onclick="addToCart('UltraPods - Green', 499.00)">Add to Cart</button>
             </div>
